--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymSalesInvoice/_SaleInvoiceList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymSalesInvoice/_SaleInvoiceList.cshtml
@@ -41,7 +41,7 @@
 									}
 								</div>
 							</td>
-							<td>@item.BillAmount</td>
+							<td>@AdminGeneralHelper.FormatPriceWithCurrency(@item.BillAmount)</td>
 							<td>
 								@if (item.PaymentType.Equals("Cash", StringComparison.InvariantCultureIgnoreCase))
 								{
@@ -68,10 +68,8 @@
 								}
 								@item.PaymentReceivedBy
 							</td>
-							<td style="vertical-align: middle; text-align: center; width: 50px; height: 50px;">
-								<div style="display: flex; justify-content: center; align-items: center; height: 100%;">
-									<i class="fas fa-print" style="font-size: 20px; color: #333;"></i>
-								</div>
+							<td class="text-center data-action">
+								<a href="../@controllerName/GetSalesInvoiceDetails?salesInvoiceMasterId=@item.SalesInvoiceMasterId" title="Update" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-print"></i></a>
 							</td>
 						</tr>
 					}
