--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_ModuleList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_ModuleList.cshtml
@@ -7,17 +7,14 @@
     string actionName = Convert.ToString(ViewContext.RouteData.Values["action"]).ToLower();
     UserMenuModel userMenuModel = Model?.MenuList?.FirstOrDefault(x => x.ControllerName == controllerName);
     List<UserMenuModel> menuList = userMenuModel != null ? Model?.MenuList?.Where(x => x.ModuleCode == userMenuModel.ModuleCode)?.ToList() : null;
-    string moduleName = userMenuModel != null ? Model?.ModuleList?.FirstOrDefault(x => x.ModuleCode == userMenuModel.ModuleCode)?.ModuleName : string.Empty;
+    UserModuleModel userModuleModel = userMenuModel != null ? Model?.ModuleList?.FirstOrDefault(x => x.ModuleCode == userMenuModel.ModuleCode): new UserModuleModel();
 }
 
 <li class="has-submenu">
     <a href="#">
         <span>
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home align-self-center hori-menu-icon">
-                <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
-                <polyline points="9 22 9 12 15 12 15 22"></polyline>
-            </svg>
-            @moduleName
+            <i class="@userModuleModel.ModuleIconName"></i>
+            @userModuleModel.ModuleName
         </span>
     </a>
     <ul class="submenu">
@@ -25,7 +22,7 @@
         {
             <li>
                 <a href="/@item.DefaultMenuLink">
-                    <i class="ti ti-minus"></i>@item.ModuleName
+                    <i class="@item.ModuleIconName"></i>@item.ModuleName
                 </a>
             </li>
         }
