--- a/Coditech.Project/Admin/Coditech.Admin/Views/Dashboard/GeneralDashboard.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Dashboard/GeneralDashboard.cshtml
@@ -33,8 +33,8 @@
                             <div class="card-body">
                                 <div class="row d-flex justify-content-center">
                                     <div class="col">
-                                        <p class="text-dark mb-0 fw-semibold">@item.ModuleName</p>
-                                        @* <h3 class="m-0">@item.ModuleName</h3> *@
+                                        <p class="text-dark mb-0 fw-semibold">&nbsp;</p>
+                                        <h5 class="m-0">@item.ModuleName</h5>
                                     </div>
                                     <div class="col-auto align-self-center">
                                         <div class="report-main-icon bg-light-alt">
