--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
@@ -140,3 +140,8 @@
 </body>
 @await RenderSectionAsync("Scripts", required: false)
 </html>
+<script>
+    if (performance.navigation.type == 2) {
+        location.reload();
+    }
+</script>
