--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_MenuList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_MenuList.cshtml
@@ -6,7 +6,7 @@
 }
 @if (Model?.Count > 0)
 {
-    @foreach (UserMenuModel itemParent in Model.Where(x => x.ParentMenuId == 0).OrderBy(y => y.MenuDisplaySeqNo))
+    @foreach (UserMenuModel itemParent in Model.Where(x => x.ParentMenuCode == null).OrderBy(y => y.MenuDisplaySeqNo))
     {
         <li class="has-submenu last-elements">
             <a href="#">
@@ -19,13 +19,13 @@
                 </span>
             </a>
             <ul class="submenu">
-                @foreach (UserMenuModel itemMenu in Model.Where(x => x.ParentMenuId == itemParent.UserMainMenuMasterId).OrderBy(y => y.MenuDisplaySeqNo))
+                @foreach (UserMenuModel itemMenu in Model.Where(x => x.ParentMenuCode == itemParent.MenuCode).OrderBy(y => y.MenuDisplaySeqNo))
                 {
                     <li>
                         <a href="/@itemMenu.MenuLink">
-                            @if (!string.IsNullOrEmpty(itemParent.MenuIconName))
+                            @if (!string.IsNullOrEmpty(itemMenu.MenuIconName))
                             {
-                                <i class="ti ti-minus"></i>
+                                <i class="@itemMenu.MenuIconName"></i>
                             }
                             @itemMenu.MenuName
                         </a>
