--- a/Coditech.Project/Admin/Coditech.Admin/Views/User/ResetPassword.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/User/ResetPassword.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Coditech.Admin.ViewModel
-@model UserLoginViewModel
+@model ResetPasswordViewModel
 @{
     Layout = null;
     string applicationLogoPath = CoditechAdminSettings.ApplicationLogoPath;
@@ -8,7 +8,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Login</title>
+    <title>Reset Password</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta content="" name="description">
     <meta content="" name="author">
@@ -36,19 +36,15 @@
                                     <a href="#" class="logo logo-admin">
                                         <img src="@applicationLogoPath" height="50" alt="logo" class="auth-logo">
                                     </a>
-                                    <h4 class="fw-semibold text-white font-18">Sign In</h4>
+                                    <h4 class="fw-semibold text-white font-18">Reset Password</h4>
+                                    <p class="text-muted  mb-0">Instructions will be sent to you on your email address or no mobile number!</p>
                                 </div>
                             </div>
                             <div class="card-body p-0 auth-content">
-                                <ul class="nav-border nav nav-pills" role="tablist">
-                                    <li class="nav-item">
-                                        <a class="nav-link active fw-semibold" data-bs-toggle="tab" href="/user/login" role="tab">Log In</a>
-                                    </li>
-                                </ul>
                                 <!-- Tab panes -->
                                 <div class="tab-content">
                                     <div class="tab-pane active p-3" id="LogIn_Tab" role="tabpanel">
-                                        @using (Html.BeginForm("Login", "User", FormMethod.Post))
+                                        @using (Html.BeginForm("ResetPassword", "User", FormMethod.Post))
                                         {
                                             @Html.AntiForgeryToken()
                                             <div class="form-group mb-2">
@@ -58,34 +54,11 @@
                                                 </div>
                                                 @Html.ValidationMessageFor(m => m.UserName, null)
                                             </div>
-
-                                            <div class="form-group mb-2">
-                                                @Html.LabelFor(x => x.Password, new { @class = "form-label" })
-                                                <div class="input-group">
-                                                    @Html.TextBoxFor(x=>x.Password, new{@class="form-control" ,type="password" ,placeholder="Password here..."})
-                                                </div>
-                                                @Html.ValidationMessageFor(m => m.Password, null)
-                                                @Html.ValidationMessageFor(m => m.ErrorMessage, null)
-                                            </div>
-
-                                            <div class="form-group row my-3">
-                                                <div class="col-sm-6">
-                                                    <div class="custom-control custom-switch switch-success">
-                                                        <input type="checkbox" class="custom-control-input" id="customSwitchSuccess">
-                                                        <label class="form-label text-muted" for="customSwitchSuccess">Remember me</label>
-                                                    </div>
-                                                </div>
-                                                <div class="col-sm-6 text-end">
-                                                    <a href="/user/resetpassword" class="text-muted font-13"><i class="dripicons-lock"></i>Forgot password?</a>
-                                                </div>
-                                            </div>
-
                                             <div class="form-group mb-0 row">
                                                 <div class="col-12">
-                                                    <button class="btn btn-primary w-100 waves-effect waves-light">Log In <i class="fas fa-sign-in-alt ms-1"></i></button>
+                                                    <button class="btn btn-primary w-100 waves-effect waves-light">Reset<i class="fas fa-sign-in-alt ms-1"></i></button>
                                                 </div>
                                             </div> 
-                                            @Html.HiddenFor(x=>x.ReturnUrl)
                                         }
                                     </div>
                                 </div>
