--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_GymMemberDetailsSidePannel.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_GymMemberDetailsSidePannel.cshtml
@@ -14,25 +14,25 @@
                     <i class="ti-menu"></i><h5 class="m-0 ps-2">Personal Details</h5>
                 </a>
                 <a class="nav-link" href="/GymMemberDetails/MemberOtherDetails?gymMemberDetailId=@gymMemberDetailId" aria-selected="true">
-                    <i class="ti-key"></i><h5 class="m-0 ps-2">Other Details</h5>
+                    <i class="fas fa-info-circle"></i><h5 class="m-0 ps-2">Other Details</h5>
                 </a>
                 <a class="nav-link" href="/GymMemberDetails/GetGymMemberMembershipPlan?gymMemberDetailId=@gymMemberDetailId&personId=@personId" aria-selected="true">
-                    <i class="ti-user"></i><h5 class="m-0 ps-2">Membership Plan</h5>
+                    <i class="fas fa-id-card-alt"></i><h5 class="m-0 ps-2">Membership Plan</h5>
                 </a>
                 <a class="nav-link" href="/GymMemberDetails/MemberPaymentHistoryList?gymMemberDetailId=@gymMemberDetailId&personId=@personId" aria-selected="true">
-                    <i class="ti-user"></i><h5 class="m-0 ps-2">Payment History</h5>
+                    <i class="fas fa-history"></i><h5 class="m-0 ps-2">Payment History</h5>
                 </a>
                 <a class="nav-link" href="/GymMemberDetails/CreateEditGymMemberAddress?gymMemberDetailId=@gymMemberDetailId&personId=@personId" aria-selected="true">
-                    <i class="ti-user"></i><h5 class="m-0 ps-2">Address</h5>
+                    <i class="fas fa-map-marker-alt"></i><h5 class="m-0 ps-2">Address</h5>
                 </a>
                 <a class="nav-link" href="/gymmemberdetails/GetBodyMeasurementTypeListByMemberId?gymMemberDetailId=@gymMemberDetailId&personId=@personId" aria-selected="true">
-                    <i class="ti-user"></i><h5 class="m-0 ps-2">Body Measurement</h5>
+                    <i class="fas fa-ruler"></i><h5 class="m-0 ps-2">Body Measurement</h5>
                 </a>
                 <a class="nav-link" href="/GymMemberDetails/MemberFollowUpList?gymMemberDetailId=@gymMemberDetailId&personId=@personId" aria-selected="true">
-                    <i class="ti-user"></i><h5 class="m-0 ps-2">Follow-up</h5>
+                    <i class="fas fa-handshake"></i><h5 class="m-0 ps-2">Follow-up</h5>
                 </a>
                 <a class="nav-link" href="/GymMemberDetails/MemberAttendanceDetails?gymMemberDetailId=@gymMemberDetailId&personId=@personId" aria-selected="true">
-                    <i class="ti-user"></i><h5 class="m-0 ps-2">Attendance Details</h5>
+                    <i class="fas fa-calendar-check"></i><h5 class="m-0 ps-2">Attendance Details</h5>
                 </a>
              
             </div>
