--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/_List.cshtml
@@ -33,26 +33,26 @@
                                 <a href="#" title="Delete" class="btn btn-sm btn-soft-danger btn-circle" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal_@item.GymMembershipPlanId"><i class="fas fa-trash-alt"></i></a>
                                 <!-- Delete Confirmation Modal -->
                                 <div class="modal fade" id="confirmDeleteModal_@item.GymMembershipPlanId" tabindex="-1" role="dialog" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true">
-                                    <div class="modal-dialog modal-dialog-centered" role="document">
+                                    <div class="modal-dialog modal-dialog-centered" style="max-width: 500px;" role="document">
                                         <div class="modal-content">
                                             <div class="modal-header">
                                                 <h5 class="modal-title" id="confirmDeleteModalLabel">Confirm Delete</h5>
                                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                             </div>
-                                            <div class="modal-body">
-                                                Are you sure you want to delete this record?
+                                            <div class="modal-body" style="text-align: left;">
+                                                <span style="font-size: 24px; margin-right: 10px;"><i class="fas fa-exclamation-triangle text-danger"></i></span>
+                                                <span style="font-size: 16px;">Are you sure you want to delete this record?</span>
                                             </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                                                 <!-- Delete action with selectedCentreCode parameter -->
-                                                <a href="/@controllerName/Delete?gymMembershipPlanIds=@item.GymMembershipPlanId&selectedCentreCode=@Model.SelectedCentreCode" class="btn btn-danger" onclick="GymMembershipPlanController.Delete('@item.GymMembershipPlanId')">Delete</a>
+                                                <a href="/@controllerName/Delete?gymMembershipPlanIds=@item.GymMembershipPlanId&selectedCentreCode=@Model.SelectedCentreCode" class="btn btn-outline-danger">Delete</a>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </td>
                         </tr>
-                       
                     }
                 }
             </tbody>
@@ -60,3 +60,4 @@
     </div>
 </div>
 @Html.Partial("~/Views/Shared/Datatable/_DatatablePagination.cshtml", Model.PageListViewModel)
+
