DEPT_TC_022:Continuous Clicking on Save Button Causes Endless Loading During Department Creation Or create multiple duplicate record

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
@@ -144,4 +144,13 @@
     if (performance.navigation.type == 2) {
         location.reload();
     }
+
+    window.onbeforeunload = function () {
+        var inputs = document.getElementsByTagName("button");
+        for (var i = 0; i < inputs.length; i++) {
+            if (inputs[i].type == "button" || inputs[i].type == "submit") {
+                inputs[i].disabled = true;
+            }
+        }
+    };
 </script>
