--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GymMemberBodyMeasurement/GymMemberBodyMeasurement.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GymMemberBodyMeasurement/GymMemberBodyMeasurement.cshtml
@@ -1,6 +1,6 @@
 ﻿@model GymMemberBodyMeasurementListViewModel
 @{
-    ViewBag.Title = "Update Other Details";
+    ViewBag.Title = "Body Measurement Details";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
     Dictionary<string, string> keyValuePairs = new Dictionary<string, string>();
