--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GymMemberMembershipPlan/GymMemberMembershipPlanList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GymMemberMembershipPlan/GymMemberMembershipPlanList.cshtml
@@ -1,6 +1,6 @@
 ﻿@model GymMemberMembershipPlanListViewModel
 @{
-    ViewBag.Title = "Payment History List";
+    ViewBag.Title = "Membership Plan List";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string css = Model.PersonId > 0 ? "col-lg-10" : "col-lg-12";
     Dictionary<string, string> keyValuePairs = new Dictionary<string, string>();
