--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymSalesInvoice/SaleInvoiceList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymSalesInvoice/SaleInvoiceList.cshtml
@@ -1,6 +1,6 @@
 ﻿@model GymMemberSalesInvoiceListViewModel
 @{
-    ViewBag.Title = "Gym Sale Invoice List";
+    ViewBag.Title = "Sale Invoice List";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
     DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "GymSalesInvoice.GetSaleInvoiceListByCentreCode('" + @controllerName + "','" + @actionName + "')" };
