--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymSalesInvoice/_SaleInvoiceList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymSalesInvoice/_SaleInvoiceList.cshtml
@@ -64,7 +64,7 @@
 								}
 								else
 								{
-									<i class="fas fa-user"></i>
+									<i class="fas fa-user-tie"></i>
 								}
 								@item.PaymentReceivedBy
 							</td>
