--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GymMemberMembershipPlan/AssociateGymMemberMembershipPlan.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GymMemberMembershipPlan/AssociateGymMemberMembershipPlan.cshtml
@@ -92,7 +92,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <a id="saveDraft" class="btn btn-success" data-test-selector="linkSave" onclick="GymMemberMembershipPlan.AssociateGymMemberMembershipPlan()">@AdminResources.LabelSave</a>
+                            <button type="submit" id="saveDraft" class="btn btn-success" data-test-selector="linkSave" onclick="GymMemberMembershipPlan.AssociateGymMemberMembershipPlan()">@AdminResources.LabelSave</button>
                             <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
                         }
                     </div>
