--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/List.cshtml
@@ -1,6 +1,6 @@
 ﻿@model GymMembershipPlanListViewModel
 @{
-    ViewBag.Title = "Gym Membership Plan List";
+    ViewBag.Title = "Membership Plan List";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
     DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "CoditechCommon.LoadListByCentreCode('" + @controllerName + "','" + @actionName + "')" };
