--- a/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/UpdateEmployeeeDetails.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/UpdateEmployeeeDetails.cshtml
@@ -61,7 +61,7 @@
 
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.EmployeeDesignationMasterId, new { @class = "form-label" })
+                                        @Html.LabelFor(x => x.EmployeeDesignationMasterId, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                         {
                                             DropdownType = DropdownTypeEnum.Designation.ToString(),
@@ -123,7 +123,7 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.IsEmployeeSmoker, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.IsEmployeeSmoker, new { @class = "form-label" })
                                         <div class="form-check">
                                             @Html.CheckBoxFor(x => x.IsEmployeeSmoker, new { @class = "form-check-input" })
                                         </div>
@@ -131,7 +131,7 @@
                                 </div>
                                 <div class="col-lg-4">
                                 <div class="mb-3">
-                                    @Html.LabelFor(x => x.IsActive, new { @class = "form-label required" })
+                                    @Html.LabelFor(x => x.IsActive, new { @class = "form-label" })
                                     <div class="form-check">
                                         @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
                                     </div>
