--- a/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/_EmployeeDetailsSidePannel.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/_EmployeeDetailsSidePannel.cshtml
@@ -14,10 +14,10 @@
                     <i class="ti-menu"></i><h5 class="m-0 ps-2">Personal Details</h5>
                 </a>
                 <a class="nav-link" href="/EmployeeMaster/GetEmployeeOtherDetail?employeeId=@employeeId&personId=@personId" aria-selected="true">
-                    <i class="ti-key"></i><h5 class="m-0 ps-2">Other Details</h5>
+                    <i class="fas fa-address-card"></i><h5 class="m-0 ps-2">Other Details</h5>
                 </a>
                 <a class="nav-link" href="/EmployeeMaster/EmployeeService?employeeId=@employeeId&personId=@personId" aria-selected="true">
-                    <i class="ti-user"></i><h5 class="m-0 ps-2">Service Details</h5>
+                    <i class="fas fa-user-cog"></i><h5 class="m-0 ps-2">Service Details</h5>
                 </a>
             </div>
         </div>
