--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GeneralPersonAttendanceDetails/_CreateEditGeneralPersonAttendanceDetails.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GeneralPersonAttendanceDetails/_CreateEditGeneralPersonAttendanceDetails.cshtml
@@ -7,9 +7,10 @@
 <!-- Page Content-->
 <div class="modal-header">
     <h6 class="modal-title m-0" id="exampleModalDefaultLabel">
-        <i class="fas fa-user" style="color: white; margin-right: 10px; font-size: 24px;"></i>
-        <span style="vertical-align: middle; font-size: 18px;">Manual Attendance: @Model.FirstName @Model.LastName </span>
+        <span><i class="fas fa-calendar-check"></i></span>
+        <span style="margin-left: 5px;">Manual Attendance : @Model.FirstName @Model.LastName </span>
     </h6>
+
     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" style="margin-top: -3px; padding: 10px;"></button>
 </div>
 
