--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_CreateEditMemberFollowUp.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_CreateEditMemberFollowUp.cshtml
@@ -9,11 +9,17 @@
 <div class="modal-header">
     @if (Model.GymMemberFollowUpId > 0)
     {
-        <h6 class="modal-title m-0" id="exampleModalDefaultLabel">Update Member Follow Up</h6>
+        <h6 class="modal-title m-0" id="exampleModalDefaultLabel">
+            <span><i class="fas fa-handshake"></i></span>
+            <span style="margin-left: 5px;">Update Member Follow Up</span>
+        </h6>
     }
     else
     {
-        <h6 class="modal-title m-0" id="exampleModalDefaultLabel">Add Member Follow Up</h6>
+        <h6 class="modal-title m-0" id="exampleModalDefaultLabel">
+            <span><i class="fas fa-handshake"></i></span>
+            <span style="margin-left: 5px;">Add Member Follow Up</span>
+        </h6>
     }
     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 </div><!--end modal-header-->
@@ -65,7 +71,10 @@
 
     <!--end modal-body-->
     <div class="modal-footer">
-        <a id="saveDraft" class="btn btn-success" data-test-selector="linkSave" onclick="GymMemberDetails.SaveFollowup()">@AdminResources.LabelSave</a>
+        <button type="submit" id="saveDraft" class="btn btn-success" data-test-selector="linkSave" onclick="GymMemberDetails.SaveFollowup(); return false;">
+            @AdminResources.LabelSave
+        </button>
+
         <button type="button" class="btn btn-soft-secondary btn-sm" data-bs-dismiss="modal">Close</button>
     </div>
 }
