--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/CreateEdit.cshtml
@@ -184,7 +184,7 @@
 							</div> *@
 								<div class="col-lg-4">
 									<div class="mb-3">
-										@Html.LabelFor(x => x.IsTimebaseBiometricAccess, new { @class = "form-label required" })
+										@Html.LabelFor(x => x.IsTimebaseBiometricAccess, new { @class = "form-label" })
 										<div class="form-check">
 											@Html.CheckBoxFor(x => x.IsTimebaseBiometricAccess, new { @class = "form-check-input" })
 										</div>
