--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseDepartment/_AssociateUnAssociateCentrewiseDepartment.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseDepartment/_AssociateUnAssociateCentrewiseDepartment.cshtml
@@ -49,7 +49,7 @@
 
     <!--end modal-body-->
     <div class="modal-footer">
-        <a id="saveDraft" class="btn btn-success" data-test-selector="linkSave" onclick="OrganisationCentrewiseDepartment.AssociateUnAssociateCentrewiseDepartment()">@AdminResources.LabelSave</a>
+        <button type="submit" id="saveDraft" class="btn btn-success" data-test-selector="linkSave" onclick="OrganisationCentrewiseDepartment.AssociateUnAssociateCentrewiseDepartment(); return false;">@AdminResources.LabelSave</button>
         <button type="button" class="btn btn-soft-secondary btn-sm" data-bs-dismiss="modal">Close</button>
     </div>
 }
