--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_CreateEditGeneralPerson.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_CreateEditGeneralPerson.cshtml
@@ -9,7 +9,7 @@
 <div class="row">
     <div class="col-lg-3">
         <div class="mb-3">
-            @Html.LabelFor(x => x.PersonTitle, new { @class = "form-label required" })
+            @Html.LabelFor(x => x.PersonTitle, new { @class = "form-label" })
             @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
        {
            DropdownSelectedValue = Model.PersonTitle ?? string.Empty,
