Gym Sales Invoice ui

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymSalesInvoice/SalesInvoicePrint.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymSalesInvoice/SalesInvoicePrint.cshtml
@@ -8,7 +8,7 @@
 
 <!-- Page Content-->
 <div class="page-content mt-5">
-    <div class="container-fluid" style="padding:0 1rem;">
+    <div class="container-fluid">
         <div class="row" style="--bs-gutter-x: 1.5rem;
 							--bs-gutter-y: 0;
 							display: flex;
@@ -32,7 +32,7 @@
 							flex-wrap: wrap;
 							margin-top: calc(-1* var(--bs-gutter-y));
 							margin-right: calc(-.5* var(--bs-gutter-x));
-							margin-left: calc(-.5* var(--bs-gutter-x));">
+							margin-left: calc(-.5* var(--bs-gutter-x));padding:0 1rem;">
                                 <div class="col-md-4 align-self-center" style="flex: 0 0 auto;width: 33.33333%;align-self: center !important; margin-bottom:1rem;">
                                     <img src="@applicationLogoPath" alt="logo-small" class="logo-sm me-1" height="50">
                                 </div>
@@ -51,7 +51,7 @@
 							flex-wrap: wrap;
 							margin-top: calc(-1* var(--bs-gutter-y));
 							margin-right: calc(-.5* var(--bs-gutter-x));
-							margin-left: calc(-.5* var(--bs-gutter-x));">
+							margin-left: calc(-.5* var(--bs-gutter-x));padding:0 1rem;">
                                 <div class="col-md-4" style="flex: 0 0 auto; width: 28%;">
                                     <div class="">
                                         <h6 class="mb-0" style="font-size: 0.8125rem;margin-top: 0;margin-bottom: 10px !important;">
@@ -97,7 +97,7 @@
 							flex-wrap: wrap;
 							margin-top: calc(-1* var(--bs-gutter-y));
 							margin-right: calc(-.5* var(--bs-gutter-x));
-							margin-left: calc(-.5* var(--bs-gutter-x));margin-top:30px;">
+							margin-left: calc(-.5* var(--bs-gutter-x));margin-top:30px;padding:0 1rem;">
                                 <div class="col-lg-12" style="padding:0 1rem;flex: 0 0 auto;width: 100%;">
                                     <div class="table-responsive project-invoice">
                                         <table class="table table-bordered mb-0" 
@@ -176,7 +176,7 @@
 							flex-wrap: wrap;
 							margin-top: calc(-1* var(--bs-gutter-y));
 							margin-right: calc(-.5* var(--bs-gutter-x));
-							margin-left: calc(-.5* var(--bs-gutter-x));">
+							margin-left: calc(-.5* var(--bs-gutter-x));padding:0 1rem;">
                                 <div class="col-lg-6"  style="flex: 0 0 auto;width: 60%;">
                                     <h5 class="mt-4">Payment Details</h5>
                                     <ul class="ps-3">
@@ -193,7 +193,7 @@
 							        flex-wrap: wrap;
 							        margin-top: calc(-1* var(--bs-gutter-y));
 							        margin-right: calc(-.5* var(--bs-gutter-x));
-							        margin-left: calc(-.5* var(--bs-gutter-x));">
+							        margin-left: calc(-.5* var(--bs-gutter-x));padding:0 1rem;">
 
                                 <div class="col-lg-8" style="flex: 0 0 auto;width: 49.33%;">
                                     <h5 class="mt-4">Terms And Condition :</h5>
